# Change-Rader

./: .gitignore  CLOUDBASE_DEPLOY.md  PRODUCT_TECH_DESIGN.md  README.md  ROADMAP.md  app.js  app.json  app.wxss  compose.yaml  project.config.json  sitemap.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1253127b35e5_initial_persistent_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: __init__.py  alerts.py  anomalies.py  market.py  securities.py  watchlist.py
backend/app/cache/: __init__.py  service.py
backend/app/db/: models.py  seed.py  session.py
backend/app/market_data/: __init__.py  eastmoney.py  engine.py  runner.py  sina.py  sync.py
backend/app/models/: __init__.py  api.py
backend/app/repositories/: __init__.py  database_market.py  dependencies.py  mock_market.py
backend/app/settings/: __init__.py  config.py
backend/tests/: test_api.py  test_market_clock.py  test_rule_engine.py
config/: env.js
pages/index/: index.js  index.json  index.wxml  index.wxss
services/: api.js
