[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "change-radar-backend"
version = "0.1.0"
description = "异动雷达 FastAPI 后端 MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115,<1.0",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8,<10",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
